[package]
name = "egui_memory_editor"
version = "0.2.13"
authors = ["Hirtol <rust@hirtol.top>"]
edition = "2024"
description = "A simple memory editor for the egui library"
readme = "README.md"
homepage = "https://github.com/Hirtol/egui_memory_editor"
repository = "https://github.com/Hirtol/egui_memory_editor"
license = "MIT/Apache-2.0"
keywords = ["egui", "memory", "editor", "emulator"]
categories = ["gui"]
exclude = ["assets/*", ".github/*"]

[features]
default = []
serde = ["dep:serde", "egui/persistence"]

[dependencies]
egui = { version = "0.32", default-features = false }

[dev-dependencies]
eframe = "0.32"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

